--- a/Frontend/contributor/contributor.html
+++ b/Frontend/contributor/contributor.html
@@ -99,29 +99,49 @@
         }
     </script>
 
-    <footer class="bg-blue-600 text-white py-8">
-        <div class="footer-container">
-            <div class="footer-links">
-                <a href="../about.html" class="text-white hover:underline">About Us</a>
-                <a href="../contact.html" class="text-white hover:underline">Contact Us</a>
-                <a href="../review.html" class="text-white hover:underline">Review</a>
-                <a href="../faq.html" class="text-white hover:underline">FAQ</a>
-                <a href="https://samnwadh.vercel.app/feedback.html" class="text-white hover:underline">Feedback</a>
-                <a href="privacy.html" class="text-white hover:underline">Privacy Policy</a>
-                <a href="terms.html" class="text-white hover:underline">Terms & Conditions</a>
-            </div>
-        </div>
-
-        <div class="bottom-footer">
-            <p>&copy; 2025 Samnwadh. All rights reserved.</p>
-            <div class="social-links">
-                <a href="https://github.com/ak-0283"><i class="fab fa-github"></i></a>
-                <a href="https://discord.com/users/762235277263241236"><i class="fa-brands fa-discord"></i></a>
-                <a href="https://x.com/AK_2805"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/abhay-kumar-117b4327b/"><i class="fa-brands fa-linkedin"></i></a>
-            </div>
-        </div>
-    </footer>
+<footer class="bg-blue-600 text-white py-8">
+  <div class="footer-container">
+    <div class="newsletter">
+      <h3>Subscribe to our Newsletter</h3>
+      <form id="subscribeForm">
+        <input
+          type="email"
+          id="emailInput"
+          placeholder="Enter your email"
+          required
+        />
+        <button class="submit" type="submit">Subscribe</button>
+      </form>
+    </div>
+    <div class="footerLinksForAdminInfo">
+      <p>📍 Location: xyz, India</p>
+      <p>📞 Phone: <a href="tel:+919876543210">+91 99999 99990</a></p>
+      <p>
+        📧 Email:
+        <a href="mailto:your-email@example.com">your-email@example.com</a>
+      </p>
+    </div>
+    <!-- Footer Links (Right Side) -->
+    <div class="footer-links">
+      <a href="about.html" class="text-white hover:underline">About Us</a>
+      <a href="contact.html" class="text-white hover:underline"
+        >Contact Us</a
+      >
+      <a href="review.html" class="text-white hover:underline">Review</a>
+      <a href="faq.html" class="text-white hover:underline">FAQ</a>
+      <a href="feedback.html" class="text-white hover:underline"
+        >Feedback</a
+      >
+      <a href="blog.html" class="text-white hover:underline"> Blog </a>
+      <a href="privacy.html" class="text-white hover:underline"
+        >Privacy Policy</a
+      >
+      <a href="terms.html" class="text-white hover:underline"
+        >Terms & Conditions</a
+      >
+    </div>
+  </div>
+</footer>
 
     <script>
         // ... (rest of the script: slide show, scroll button, translation)
