--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -336,6 +336,23 @@
             >Terms & Conditions</a
           >
         </div>
+        <div class="bottom-footer">  
+        
+
+          <p>&copy; 2025 Samnwadh. All rights reserved.</p>
+          <div class="social-links">
+            <a href="https://github.com/ak-0283"><i class="fab fa-github"></i></a>
+            <a href="https://discord.com/users/762235277263241236"
+              ><i class="fa-brands fa-discord"></i
+            ></a>
+            <a href="https://x.com/AK_2805"
+              ><i class="fa-brands fa-x-twitter"></i
+            ></a>
+            <a href="https://www.linkedin.com/in/abhay-kumar-117b4327b/"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+        </div>
       </div>
     </footer>
     <script src="feedback.js"></script>
