Fixed dark mode bug of review

--- a/Frontend/review.html
+++ b/Frontend/review.html
@@ -89,6 +89,13 @@
         color: #f4c542;
         font-size: 18px;
       }
+      .dark-mode .testimonial-section{
+        background: #333;
+      }
+      .dark-mode .testimonial-section h2, 
+      .dark-mode .testimonial-section h4{
+        color: #1E90FF;
+      }
     </style>
   </head>
   <body>
