Added Dark mode

--- a/Frontend/terms.html
+++ b/Frontend/terms.html
@@ -169,7 +169,7 @@
         >
       </div>
     </div>
-  </footer>
+  <!-- </footer> -->
       <div class="bottom-footer">
         <p>&copy; 2025 Samnwadh. All rights reserved.</p>
         <div class="social-links">
