--- a/Frontend/privacy.html
+++ b/Frontend/privacy.html
@@ -72,6 +72,10 @@
             <li><a href="#community">Community</a></li>
             <li><a href="login.html">Login</a></li>
           </ul>
+          <button type="button" id="darkModeToggle" class="toggle">
+            <span class="icon sun">☀️</span>
+            <span class="icon moon">🌙</span>
+          </button>
         </nav>
       </div>
     </header>
