--- a/Frontend/privacy.html
+++ b/Frontend/privacy.html
@@ -57,6 +57,15 @@
       a:hover {
         text-decoration: underline;
       }
+      .dark-mode h1,
+      .dark-mode h2,
+      .dark-mode a {
+        color: goldenrod;
+      }
+      .dark-mode .containerprivacy {
+        background-color: #333;
+        color: #fff;
+      }
     </style>
   </head>
   <body class="bg-gray-100 text-gray-900">
