darmode added too faq

--- a/Frontend/faq.html
+++ b/Frontend/faq.html
@@ -73,6 +73,10 @@
                   <li><a href="review.html">Review</a></li>
                   <li><a href="login.html">Login</a></li>
               </ul>
+              <button type="button" id="darkModeToggle" class="toggle">
+                <span class="icon sun">☀️</span>
+                <span class="icon moon">🌙</span>
+              </button>
           </nav>
       </div>
   </header>
