commmunity footer added

--- a/Frontend/community.html
+++ b/Frontend/community.html
@@ -92,6 +92,8 @@
                 <a href="feedback.html" class="text-white hover:underline"
                   >Feedback</a
                 >
+                <a href="community.html" class="text-white hover:underline"
+            >Community</a>
                 <a href="terms.html" class="text-white hover:underline"
                   >Terms & Conditions</a
                 >
