--- a/Frontend/faq.html
+++ b/Frontend/faq.html
@@ -231,6 +231,8 @@
           <a href="feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
+          <a href="community.html" class="text-white hover:underline"
+            >Terms & Conditions</a
           <a href="terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
           >
