--- a/Frontend/feedback.html
+++ b/Frontend/feedback.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback</title>
-    <link rel="stylesheet" href="feedback.css" >
-    
+    <link rel="stylesheet" href="feedback.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -15,9 +15,9 @@
     <!-- Navbar -->
     <nav class="navbar">
       <button class="back-button" onclick="window.location.href = 'index.html'">
-          <i class="fa-solid fa-arrow-left fa-xl"></i>
+        <i class="fa-solid fa-arrow-left fa-xl"></i>
       </button>
-  </nav>
+    </nav>
 
     <div class="feedback-container">
       <h2 class="feedback-title">We Value Your Feedback!</h2>
@@ -98,6 +98,9 @@
           <a href="feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
+          <a href="community.html" class="text-white hover:underline"
+            >Community</a
+          >
           <a href="terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
           >
@@ -125,7 +128,6 @@
         </div>
       </div>
     </footer>
-  
 
     <script src="feedback.js"></script>
   </body>
