--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -331,6 +331,9 @@
           <a href="feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
+          <a href="community.html" class="text-white hover:underline"
+            >Community</a
+          >
           <a href="blog.html" class="text-white hover:underline"> Blog </a>
           <a href="privacy.html" class="text-white hover:underline"
             >Privacy Policy</a
@@ -352,6 +355,9 @@
           <a href="faq.html" class="text-white hover:underline">FAQ</a>
           <a href="feedback.html" class="text-white hover:underline"
             >Feedback</a
+          >
+          <a href="community.html" class="text-white hover:underline"
+            >Community</a
           >
           <a href="terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
