--- a/Frontend/privacy.html
+++ b/Frontend/privacy.html
@@ -194,6 +194,9 @@
           <a href="feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
+          <a href="community.html" class="text-white hover:underline"
+            >Community</a
+          >
           <a href="blog.html" class="text-white hover:underline"> Blog </a>
           <a href="privacy.html" class="text-white hover:underline"
             >Privacy Policy</a
