--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -167,6 +167,9 @@
           <a href="feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
+          <a href="community.html" class="text-white hover:underline"
+            >Community</a
+          >
           <a href="terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
           >
