--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -97,7 +97,7 @@
             <li><a href="index.html">Features</a></li>
             <li><a href="techstack.html">Tech Stack</a></li>
             <li><a href="contributor/contributor.html">Contribute</a></li>
-            <li><a href="#community">Community</a></li>
+            <li><a href="community.html">Community</a></li>
             <li><a href="login.html">Login</a></li>
             <!-- <li><a href="createBlog.html">Create A Blog</a></li> -->
           </ul>
