--- a/Frontend/terms.html
+++ b/Frontend/terms.html
@@ -75,7 +75,7 @@
             <li><a href="#features">Features</a></li>
             <li><a href="techstack.html">Tech Stack</a></li>
             <li><a href="contributor/contributor.html">Contribute</a></li>
-            <li><a href="#community">Community</a></li>
+            <li><a href="community.html">Community</a></li>
             <li><a href="login.html">Login</a></li>
           </ul>
           <button type="button" id="darkModeToggle" class="toggle">
@@ -161,7 +161,7 @@
             >Feedback</a
           >
           <a href="community.html" class="text-white hover:underline"
-            >Terms & Conditions</a
+            >Community</a
           >
           <a href="blog.html" class="text-white hover:underline"> Blog </a>
           <a href="privacy.html" class="text-white hover:underline"
