--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -84,10 +84,11 @@
   </head>
 
   <body>
-
+<<<<<<<<< Temporary merge branch 1
     <!-- scroll top button -->
     <button id="scrollToTopBtn">⬆</button>
-
+=========
+>>>>>>>>> Temporary merge branch 2
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
@@ -233,7 +234,8 @@
             >Feedback</a
           >
           <a href="community.html" class="text-white hover:underline"
-            >Community</a>
+            >Community</a
+          >
           <a href="terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
           >
