--- a/Frontend/review.html
+++ b/Frontend/review.html
@@ -89,12 +89,12 @@
         color: #f4c542;
         font-size: 18px;
       }
-      .dark-mode .testimonial-section{
+      .dark-mode .testimonial-section {
         background: #333;
       }
-      .dark-mode .testimonial-section h2, 
-      .dark-mode .testimonial-section h4{
-        color: #1E90FF;
+      .dark-mode .testimonial-section h2,
+      .dark-mode .testimonial-section h4 {
+        color: goldenrod;
       }
     </style>
   </head>
@@ -195,7 +195,9 @@
               placeholder="Enter your email"
               required
             />
-            <button class="submit" type="submit">Subscribe</button>
+            <button class="submit" type="submit" onclick="{subscribeAlert()}">
+              Subscribe
+            </button>
           </form>
         </div>
         <div class="footerLinksForAdminInfo">
@@ -207,7 +209,7 @@
           </p>
         </div>
         <!-- Footer Links (Right Side) -->
-        <div class="bottom-footer">  <div class="footer-links">
+        <div class="footer-links">
           <a href="about.html" class="text-white hover:underline">About Us</a>
           <a href="contact.html" class="text-white hover:underline"
             >Contact Us</a
@@ -218,14 +220,9 @@
             >Feedback</a
           >
           <a href="community.html" class="text-white hover:underline"
-            >Community</a>
-          <a href="terms.html" class="text-white hover:underline"
-            >Terms & Conditions</a
+            >Community</a
           >
           <a href="blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="privacy.html" class="text-white hover:underline"
-            >Privacy Policy</a
-          >
           <a href="privacy.html" class="text-white hover:underline"
             >Privacy Policy</a
           >
