--- a/Frontend/createRoom.html
+++ b/Frontend/createRoom.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Room Creation Form</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="createRoom.css" />
   </head>
   <body>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <button class="back-button" onclick="window.location.href = 'index.html'">
+        <i class="fa-solid fa-arrow-left fa-xl"></i>
+      </button>
+    </nav>
     <div class="form-container">
       <h2>Create a Room</h2>
       <form id="room-form">
