--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samnwadh - Connect & Collaborate</title>
-    <link rel="icon" type="image/x-icon" href="favicon-32x32.png" />
+    <link rel="icon" type="image/x-icon" href="image.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="faq.css" />
     <link rel="stylesheet" href="card.css" />
