--- a/Frontend/contributor/contributor.html
+++ b/Frontend/contributor/contributor.html
@@ -40,6 +40,10 @@
     </style>
 </head>
 <body>
+     <!-- scroll button -->
+     <button id="scrollBtn" onclick="scrollToTop()">
+        <i class="fas fa-arrow-up"></i>
+      </button>
     <header class="bg-blue-600 text-white p-6">
         <div class="container">
             <div class="menu-toggle" id="menu-toggle">&#9776;</div>
