scroll to top button added in techstack page

--- a/Frontend/techstack.html
+++ b/Frontend/techstack.html
@@ -18,8 +18,10 @@
   </head>
 
   <body>
-    <!-- scroll top button -->
-    <button id="scrollToTopBtn">⬆</button>
+   <!-- scroll button -->
+   <button id="scrollBtn" onclick="scrollToTop()">
+    <i class="fas fa-arrow-up"></i>
+  </button>
 
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
