--- a/Frontend/review.html
+++ b/Frontend/review.html
@@ -18,6 +18,10 @@
       font-family: Arial, sans-serif;
     }
 
+    .navbar.active {
+      display: block;
+    }
+
     body {
       background-color: #f5f5f5;
       color: #333;
@@ -51,6 +55,12 @@
       padding: 20px;
       text-align: center;
       animation: slide 15s infinite;
+    }
+
+    #darkModeToggle {
+      align-items: center;
+      justify-content: center;
+      margin: 1rem auto;
     }
 
     @keyframes slide {
@@ -135,6 +145,14 @@
       .footerLinksForAdminInfo {
         margin: 0.5rem auto;
         align-items: center;
+      }
+
+      .navbar {
+        display: none !important;
+      }
+
+      .navbar.active {
+        display: block !important;
       }
     }
   </style>
