--- a/Frontend/community.html
+++ b/Frontend/community.html
@@ -12,6 +12,10 @@
         <button class="back-button" onclick="window.location.href = 'index.html'">
             <i class="fa-solid fa-arrow-left fa-xl"></i>
         </button>
+        <button type="button" id="darkModeToggle" class="toggle">
+          <span class="icon sun">☀️</span>
+          <span class="icon moon">🌙</span>
+        </button>
     </nav>
     <section id="about">
         <div class="about-container">
@@ -59,6 +63,8 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
           <footer class="bg-blue-600 text-white py-8">
             <div class="footer-container">
               <div class="newsletter">
