--- a/Frontend/review.html
+++ b/Frontend/review.html
@@ -16,7 +16,7 @@
       box-sizing: border-box;
       font-family: Arial, sans-serif;
     }
-
+    
     .navbar.active {
       display: block;
     }
@@ -24,6 +24,7 @@
     body {
       background-color: #f5f5f5;
       color: #333;
+      overflow-y: scroll;
     }
 
     .testimonial-section {
@@ -118,9 +119,7 @@
     }
 
     footer {
-      position: absolute;
-      width: 100%;
-      bottom: 0;
+      width: 100%
     }
 
     .footer-container {
