--- a/Frontend/review.html
+++ b/Frontend/review.html
@@ -168,7 +168,7 @@
           <li><a href="index.html">Features</a></li>
           <li><a href="techstack.html">Tech Stack</a></li>
           <li><a href="contributor/contributor.html">Contribute</a></li>
-          <li><a href="#community">Community</a></li>
+          <li><a href="community.html">Community</a></li>
           <li><a href="review.html">Review</a></li>
           <li><a href="login.html">Login</a></li>
         </ul>
