--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -67,7 +67,7 @@
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
 
         <a href="index.html"
-          ><img src="logo.webp" alt="Samnwadh" class="logo"
+          ><img src="image.png" alt="Samnwadh" class="logo"
         /></a>
 
         <nav class="navbar">
