--- a/Frontend/profile/user.html
+++ b/Frontend/profile/user.html
@@ -1,157 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Profile</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: Arial, sans-serif;
-      }
-      body {
-        background: linear-gradient(to right, #4facfe, #00f2fe);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-      .container {
-        background: white;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        width: 350px;
-        text-align: center;
-      }
-      .profile-img {
-        width: 80px;
-        height: 80px;
-        border-radius: 50%;
-        margin-bottom: 15px;
-        border: 3px solid #007bff;
-      }
-      .info {
-        margin-bottom: 15px;
-        font-size: 18px;
-        font-weight: bold;
-        color: #333;
-      }
-      input,
-      select {
-        width: 100%;
-        padding: 8px;
-        margin: 5px 0;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        display: none;
-      }
-      button {
-        width: 100%;
-        padding: 10px;
-        margin-top: 10px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        transition: 0.3s ease;
-      }
-      .edit-btn {
-        background: #007bff;
-        color: white;
-      }
-      .edit-btn:hover {
-        background: #0056b3;
-      }
-      .save-btn {
-        background: #28a745;
-        color: white;
-        display: none;
-      }
-      .save-btn:hover {
-        background: #218838;
-      }
-      .cancel-btn {
-        background: #dc3545;
-        color: white;
-        display: none;
-      }
-      .cancel-btn:hover {
-        background: #c82333;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <img
-        src="https://via.placeholder.com/80"
-        class="profile-img"
-        alt="User"
-      />
-      <h2>User Profile</h2>
 
-      <div class="info">Name: <span id="displayName">John Doe</span></div>
-      <div class="info">
-        Email: <span id="displayEmail">john@example.com</span>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+  <title>User Profile</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      background: linear-gradient(to right, #2A67AC, #20418F);
+    }
+
+    .info {
+      margin-bottom: 15px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    input,
+    select {
+      width: 100%;
+      padding: 8px;
+      margin: 5px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      display: none;
+    }
+
+    button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: 0.3s ease;
+    }
+
+    .edit-btn {
+      background: linear-gradient(to right, #2A67AC, #20418F);
+      color: white;
+    }
+
+    .edit-btn:hover {
+      background: #0056b3;
+    }
+
+    .save-btn {
+      background: #28a745;
+      color: white;
+      display: none;
+    }
+
+    .save-btn:hover {
+      background: #218838;
+    }
+
+    .cancel-btn {
+      background: #dc3545;
+      color: white;
+      display: none;
+    }
+
+    .cancel-btn:hover {
+      background: #c82333;
+    }
+
+    .profile-container {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
+      text-align: center;
+      width: 380px;
+      margin: 5rem auto;
+    }
+    .profile-container:hover{
+      transform: scale(1.02);
+      box-shadow: 5px 10px 20px rgba(255, 255, 255, 0.5);
+    }
+
+    .profile-pic {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid #2A67AC;
+      box-shadow: 2px 2px 5px #0056b3;
+    }
+
+    .stats {
+      display: flex;
+      justify-content: space-around;
+      margin: 15px 0;
+    }
+
+    .stat {
+      text-align: center;
+    }
+
+    .actions button {
+      background: linear-gradient(to right, #2A67AC, #20418F);
+      color: white;
+      border: none;
+      padding: 10px;
+      margin: 5px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .actions button:hover{
+      transform: translateY(-5px);
+      box-shadow: 4px 4px 5px #0f345c;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .close {
+      cursor: pointer;
+      float: right;
+    }
+
+    .navbar {
+      display: flex;
+      justify-content: left !important;
+      align-items: center;
+      background: rgba(255,255,255,0.1);
+      padding: 10px 10px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      width: 100%;
+    }
+
+    /* Back Button */
+    .back-button {
+      background: #2867f0;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      width: 4rem;
+      height: 2.5rem;
+      margin-top: 0;
+    }
+
+    .back-button:hover {
+      background: #0190f6;
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar">
+    <button class="back-button" onclick="window.location.href = '../index.html'">
+      <i class="fa-solid fa-arrow-left fa-xl"></i>
+    </button>
+  </nav>
+  <div class="profile-container">
+    <img src="https://i.pravatar.cc/150" alt="Profile Picture" class="profile-pic">
+    <h2 class="username">John Doe</h2>
+    <p class="email">@johndoe</p>
+    <div class="stats">
+      <div class="stat">
+        <p>Tech Completed</p><span>1</span>
       </div>
-      <div class="info">Gender: <span id="displayGender">Male</span></div>
-
-      <input type="text" id="name" placeholder="Full Name" />
-      <input type="email" id="email" placeholder="Email" />
-      <select id="gender">
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-        <option value="other">Other</option>
-      </select>
-
-      <button class="edit-btn" onclick="editProfile()">Edit Profile</button>
-      <button class="save-btn" onclick="saveProfile()">Save</button>
-      <button class="cancel-btn" onclick="cancelEdit()">Cancel</button>
+      <div class="stat">
+        <p>Certificate Earned</p><span>1</span>
+      </div>
+      <div class="stat">
+        <p>Community Joined</p><span>1</span>
+      </div>
     </div>
+    <div class="actions">
+      <button id="edit-btn">Edit Profile</button>
+      <button id="settings-btn">Settings</button>
+    </div>
+  </div>
+  <script>
+    document.getElementById("edit-btn").addEventListener("click", function () {
+      document.getElementById("modal").style.display = "flex";
+    });
+    document.querySelector(".close").addEventListener("click", function () {
+      document.getElementById("modal").style.display = "none";
+    });
+  </script>
 
-    <script>
-      function editProfile() {
-        document.getElementById("name").style.display = "block";
-        document.getElementById("email").style.display = "block";
-        document.getElementById("gender").style.display = "block";
+  <!-- <script>
+        function editProfile() {
+            document.getElementById("name").style.display = "block";
+            document.getElementById("email").style.display = "block";
+            document.getElementById("gender").style.display = "block";
 
-        document.getElementById("name").value =
-          document.getElementById("displayName").innerText;
-        document.getElementById("email").value =
-          document.getElementById("displayEmail").innerText;
-        document.getElementById("gender").value = document
-          .getElementById("displayGender")
-          .innerText.toLowerCase();
+            document.getElementById("name").value = document.getElementById("displayName").innerText;
+            document.getElementById("email").value = document.getElementById("displayEmail").innerText;
+            document.getElementById("gender").value = document.getElementById("displayGender").innerText.toLowerCase();
 
-        document.querySelector(".edit-btn").style.display = "none";
-        document.querySelector(".save-btn").style.display = "block";
-        document.querySelector(".cancel-btn").style.display = "block";
-      }
+            document.querySelector(".edit-btn").style.display = "none";
+            document.querySelector(".save-btn").style.display = "block";
+            document.querySelector(".cancel-btn").style.display = "block";
+        }
 
-      function saveProfile() {
-        let name = document.getElementById("name").value;
-        let email = document.getElementById("email").value;
-        let gender = document.getElementById("gender").value;
+        function saveProfile() {
+            let name = document.getElementById("name").value;
+            let email = document.getElementById("email").value;
+            let gender = document.getElementById("gender").value;
 
-        document.getElementById("displayName").innerText = name;
-        document.getElementById("displayEmail").innerText = email;
-        document.getElementById("displayGender").innerText =
-          gender.charAt(0).toUpperCase() + gender.slice(1);
+            document.getElementById("displayName").innerText = name;
+            document.getElementById("displayEmail").innerText = email;
+            document.getElementById("displayGender").innerText = gender.charAt(0).toUpperCase() + gender.slice(1);
 
-        cancelEdit();
-      }
+            cancelEdit();
+        }
 
-      function cancelEdit() {
-        document.getElementById("name").style.display = "none";
-        document.getElementById("email").style.display = "none";
-        document.getElementById("gender").style.display = "none";
+        function cancelEdit() {
+            document.getElementById("name").style.display = "none";
+            document.getElementById("email").style.display = "none";
+            document.getElementById("gender").style.display = "none";
 
-        document.querySelector(".edit-btn").style.display = "block";
-        document.querySelector(".save-btn").style.display = "none";
-        document.querySelector(".cancel-btn").style.display = "none";
-      }
-    </script>
-  </body>
+            document.querySelector(".edit-btn").style.display = "block";
+            document.querySelector(".save-btn").style.display = "none";
+            document.querySelector(".cancel-btn").style.display = "none";
+        }
+    </script> -->
+</body>
+
 </html>
