--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -70,7 +70,7 @@
           ><img src="logo.webp" alt="Samnwadh" class="logo"
         /></a>
 
-        <nav class="navbar">
+        <nav class="navbar" >
           <ul class="nav-links">
             <li><a href="#features">Features</a></li>
             <li><a href="techstack.html">Tech Stack</a></li>
@@ -215,6 +215,7 @@
       <h2 data-aos="fade-up" class="text-2xl font-bold text-center mb-8">
         Frequently Asked Questions
       </h2>
+      <p id="no-results" style="display: none; color: red;">No results found</p>
       <div data-aos="fade-up" class="faq-container">
         <div data-aos="fade-up" class="faq-item">
           <h1 data-aos="fade-up" class="question" onclick="toggleAnswer(this)">
@@ -398,16 +399,29 @@
         answer.style.display =
           answer.style.display === "block" ? "none" : "block";
       }
-
       function searchFAQ() {
-        let input = document.querySelector(".search-box").value.toLowerCase();
-        let questions = document.querySelectorAll(".faq-item");
+  let input = document.querySelector(".search-box").value.toLowerCase();
+  let questions = document.querySelectorAll(".faq-item");
+  let answers = document.querySelectorAll(".faq-answer"); // Get all answers
+  let noResults = document.getElementById("no-results");
+  let found = false;
 
-        questions.forEach((item) => {
-          let text = item.textContent.toLowerCase();
-          item.style.display = text.includes(input) ? "block" : "none";
-        });
-      }
+  questions.forEach((item, index) => {
+    let text = item.textContent.toLowerCase();
+    if (text.includes(input)) {
+      item.style.display = "block";
+      answers[index].style.display = "none"; // Hide answers on search
+      found = true;
+    } else {
+      item.style.display = "none";
+      answers[index].style.display = "none"; // Hide answers for unmatched items
+    }
+  });
+
+  // Show "No results found" if nothing is found
+  noResults.style.display = found ? "none" : "block";
+}
+
     </script>
   </body>
 </html>
