Added Dark mode in edit page

--- a/Frontend/profile/user.html
+++ b/Frontend/profile/user.html
@@ -137,6 +137,11 @@
       box-shadow: 4px 4px 5px #0f345c;
     }
 
+    .dark-mode .modal-content{
+      background-color: #484848;
+    }
+    
+
     .modal {
       display: none;
       position: fixed;
