--- a/Frontend/profile/edituser.html
+++ b/Frontend/profile/edituser.html
@@ -3,10 +3,19 @@
         color: #0f345c;
     }
 
+    .dark-mode .close{
+        color: goldenrod;
+    }
+
     .modal-content h2 {
         margin: 1rem;
         color: #20418F;
         text-shadow: 2px 2px 2px #9f9c9c;
+    }
+
+    .dark-mode .modal-content h2{
+        color: goldenrod;
+        text-shadow: none;
     }
 
     .modal-content div {
@@ -18,6 +27,13 @@
 
     .modal-content div label {
         margin-right: 1rem;
+        font-size: 1rem;
+        font-weight: bold;
+        color: #20418F;
+    }
+
+    .dark-mode .modal-content div label{
+        color: goldenrod;
     }
 
     input {
@@ -28,14 +44,13 @@
         border: 1px solid #20418F;
         border-radius: 5px;
     }
-
-    input::placeholder {
-        color: #20418F;
+    .dark-mode input{
+        border-color: goldenrod;
+        background: transparent;
+        color: white;
     }
 
-    label {
-        font-size: 1rem;
-        font-weight: bold;
+    input::placeholder {
         color: #20418F;
     }
 
@@ -44,7 +59,6 @@
         width: 98%;
         padding: 10px;
         margin: 10px auto;
-        border: 1px solid #ccc;
         border-radius: 5px;
         background: linear-gradient(to right, #2A67AC, #20418F);
         color: white;
