Added dark mode on contact page

--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -28,6 +28,10 @@
       <button class="back-button" onclick="window.location.href = 'index.html'">
         <i class="fa-solid fa-arrow-left fa-xl"></i>
       </button>
+      <button type="button" id="darkModeToggle" class="toggle">
+        <span class="icon sun">☀️</span>
+        <span class="icon moon">🌙</span>
+      </button>
     </nav>
      <div class="cont">
     <div class="contact-container">
@@ -64,6 +68,7 @@
     </div>
   </div>
     <script src="web3.js"></script>
+    <script src="script.js"></script>
     <!-- <script type="module" src="contact.js"></script> -->
   </body>
 </html>
