footer links added in techstack page

--- a/Frontend/techstack.html
+++ b/Frontend/techstack.html
@@ -185,8 +185,29 @@
     </div>
 
     <!-- footer section -->
+ 
     <footer class="bg-blue-600 text-white py-8">
       <div class="footer-container">
+        <div class="newsletter">
+          <h3>Subscribe to our Newsletter</h3>
+          <form id="subscribeForm">
+            <input
+              type="email"
+              id="emailInput"
+              placeholder="Enter your email"
+              required
+            />
+            <button class="submit" type="submit">Subscribe</button>
+          </form>
+        </div>
+        <div class="footerLinksForAdminInfo">
+          <p>📍 Location: xyz, India</p>
+          <p>📞 Phone: <a href="tel:+919876543210">+91 99999 99990</a></p>
+          <p>
+            📧 Email:
+            <a href="mailto:your-email@example.com">your-email@example.com</a>
+          </p>
+        </div>
         <!-- Footer Links (Right Side) -->
         <div class="footer-links">
           <a href="about.html" class="text-white hover:underline">About Us</a>
@@ -201,11 +222,12 @@
           <a href="community.html" class="text-white hover:underline"
             >Community</a
           >
-          <a href="privacy.html" class="text-white hover:underline"
-            >Privacy Policy</a
-          >
           <a href="terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
+          >
+          <a href="blog.html" class="text-white hover:underline"> Blog </a>
+          <a href="privacy.html" class="text-white hover:underline"
+            >Privacy Policy</a
           >
         </div>
       </div>
