--- a/Frontend/community.html
+++ b/Frontend/community.html
@@ -72,10 +72,14 @@
         .member h4 {
             margin: 10px 0 5px;
         }
+        
 
         .role {
             font-weight: bold;
             color: #555;
+        }
+        .navbar{
+          padding: 2rem 1rem !important;
         }
 
         @media (max-width: 600px) {
@@ -86,26 +90,6 @@
         }
 </style>
 <body>
-  <header class="bg-blue-600 text-white p-6">
-    <div class="container">
-        <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-        <a href="../index.html"><img src="../logo.webp" alt="Samnwadh" /></a>
-        <nav class="navbar" >
-            <ul class="nav-links">
-                <li><a href="../index.html">Features</a></li>
-                <li><a href="../techstack.html">Tech Stack</a></li>
-                <li><a href="./contributor.html">Contribute</a></li>
-                <li><a href="../community.html">Community</a></li>
-                <li><a href="../review.html">Review</a></li>
-                <li><a href="../login.html" id="auth-link">Login</a></li>
-            </ul>
-            <button type="button" id="darkModeToggle" class="toggle">
-                <span class="icon sun">☀️</span>
-                <span class="icon moon">🌙</span>
-            </button>
-        </nav>
-    </div>
-</header>
      <!-- scroll button -->
      <button id="scrollBtn" onclick="scrollToTop()">
       <i class="fas fa-arrow-up"></i>
