Created Separate folders

--- a/Frontend/profile/edituser.html
+++ b/Frontend/profile/edituser.html
@@ -76,7 +76,7 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Edit Profile</h2>
-        <img id="preview-img" src="profile.jpg" alt="Profile Picture" class="profile-pic"
+        <img id="preview-img" src="https://i.pravatar.cc/150" alt="Profile Picture" class="profile-pic"
             style="width: 80px; height: 80px; border-radius: 50%;">
         <div class="content">
             <label for="">Photo</label>
