--- a/Frontend/signup/signup.html
+++ b/Frontend/signup/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup</title>
-    <link rel="stylesheet" href="signup.css" />
+    <link rel="stylesheet" href="./signup.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -13,7 +13,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <button class="back-button" onclick="window.location.href = 'index.html'">
+      <button class="back-button" onclick="window.location.href = '../index.html'">
         <i class="fa-solid fa-arrow-left fa-xl"></i>
       </button>
       <button type="button" id="darkModeToggle" class="toggle">
@@ -34,7 +34,7 @@
           required
       />
       <label for="profilepic" class="lab-signup-profile">
-          <img src="download.png" alt="Profile Picture" />
+          <img src="../images/download.png" alt="Profile Picture" />
       </label>
   
       <input type="text" class="signup-input" id="signup-name" placeholder="Enter Name" />
@@ -77,7 +77,7 @@
   
       <p class="signup-text">
           Already have an account?
-          <a href="login.html" class="signup-link">Login</a>
+          <a href="../login/login.html" class="signup-link">Login</a>
       </p>
       <p id="signup-message" class="signup-message"></p>
   </div>
@@ -169,23 +169,23 @@
         </div>
         <!-- Footer Links (Right Side) -->
         <div class="footer-links">
-          <a href="about.html" class="text-white hover:underline">About Us</a>
-          <a href="contact.html" class="text-white hover:underline"
+          <a href="../about/about.html" class="text-white hover:underline">About Us</a>
+          <a href="../contact/contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
-          <a href="review.html" class="text-white hover:underline">Review</a>
-          <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline"
+          <a href="../review/review.html" class="text-white hover:underline">Review</a>
+          <a href="../faq/faq.html" class="text-white hover:underline">FAQ</a>
+          <a href="../feedback/feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
-          <a href="community.html" class="text-white hover:underline"
+          <a href="../community/community.html" class="text-white hover:underline"
             >Community</a
           >
-          <a href="terms.html" class="text-white hover:underline"
+          <a href="../terms/terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
           >
-          <a href="blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="privacy.html" class="text-white hover:underline"
+          <a href="../blog/blog.html" class="text-white hover:underline"> Blog </a>
+          <a href="../privacy/privacy.html" class="text-white hover:underline"
             >Privacy Policy</a
           >
         </div>
@@ -223,6 +223,6 @@
         }
       }
     </script>
-    <script src="script.js"></script>
+    <script src="../mainpage/script.js"></script>
   </body>
 </html>
