--- a/Frontend/contact/contact.html
+++ b/Frontend/contact/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us - Samnwadh</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="../mainpage/style.css" />
+    <link rel="stylesheet" href="../contact/contact.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -25,7 +25,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <button class="back-button" onclick="window.location.href = 'index.html'">
+      <button class="back-button" onclick="window.location.href = '../index.html'">
         <i class="fa-solid fa-arrow-left fa-xl"></i>
       </button>
       <button type="button" id="darkModeToggle" class="toggle">
@@ -67,8 +67,8 @@
       </form>
     </div>
   </div>
-    <script src="web3.js"></script>
-    <script src="script.js"></script>
+    <script src="../web3.js"></script>
+    <script src="../mainpage/script.js"></script>
     <!-- <script type="module" src="contact.js"></script> -->
   </body>
 </html>
