--- a/Frontend/createroom/createRoom.html
+++ b/Frontend/createroom/createRoom.html
@@ -8,12 +8,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="createRoom.css" />
+    <link rel="stylesheet" href="./createRoom.css" />
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <button class="back-button" onclick="window.location.href = 'index.html'">
+      <button class="back-button" onclick="window.location.href = '../index.html'">
         <i class="fa-solid fa-arrow-left fa-xl"></i>
       </button>
     </nav>
@@ -39,6 +39,6 @@
       </form>
     </div>
 
-    <script src="createRoom.js"></script>
+    <script src="./createRoom.js"></script>
   </body>
 </html>
