--- a/Frontend/faq/faq.html
+++ b/Frontend/faq/faq.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FAQ - Samnwadh</title>
-    <link rel="stylesheet" href="faq.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="toggle.css" />
+    <link rel="stylesheet" href="./faq.css" />
+    <link rel="stylesheet" href="../mainpage/style.css" />
+    <link rel="stylesheet" href="../toggle/toggle.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -63,15 +63,15 @@
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
           <button class="menu-toggle" id="menu-toggle">&#9776;</button>
-          <a href="index.html"><img class="logo" src="logo.webp" alt="Samnwadh" /></a>
+          <a href="../index.html"><img class="logo" src="../images/logo.webp" alt="Samnwadh" /></a>
           <nav class="navbar" id="navbar">
               <ul class="nav-links">
-                  <li><a href="#features">Features</a></li>
-                  <li><a href="techstack.html">Tech Stack</a></li>
-                  <li><a href="contributor/contributor.html">Contribute</a></li>
-                  <li><a href="community.html">Community</a></li>
-                  <li><a href="review.html">Review</a></li>
-                  <li><a href="login.html">Login</a></li>
+                  <li><a href="../index.html#features">Features</a></li>
+                  <li><a href="../tech-stack/techstack.html">Tech Stack</a></li>
+                  <li><a href="../contributor/contributor.html">Contribute</a></li>
+                  <li><a href="../community/community.html">Community</a></li>
+                  <li><a href="../review/review.html">Review</a></li>
+                  <li><a href="../login/login.html">Login</a></li>
               </ul>
               <button type="button" id="darkModeToggle" class="toggle">
                 <span class="icon sun">☀️</span>
@@ -129,7 +129,7 @@
           </h1>
           <div class="faq-answer">
             You can contribute by visiting our
-            <a href="./contributor/contributor.html">Contribute</a> section and
+            <a href="../contributor/contributor.html">Contribute</a> section and
             following the guidelines on our GitHub repository.
           </div>
         </div>
@@ -210,22 +210,22 @@
       <!-- Social Links & Copyright (Centered at Bottom) -->
       <div class="bottom-footer">
         <div class="footer-links">
-          <a href="about.html" class="text-white hover:underline">About Us</a>
-          <a href="contact.html" class="text-white hover:underline"
+          <a href="../about/about.html" class="text-white hover:underline">About Us</a>
+          <a href="../contact/contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
-          <a href="review.html" class="text-white hover:underline">Review</a>
-          <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline"
+          <a href="../review/review.html" class="text-white hover:underline">Review</a>
+          <a href="./faq.html" class="text-white hover:underline">FAQ</a>
+          <a href="../feedback/feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
-          <a href="community.html" class="text-white hover:underline"
+          <a href="../community/community.html" class="text-white hover:underline"
             >Community</a>
-          <a href="terms.html" class="text-white hover:underline"
+          <a href="../terms/terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
           >
-          <a href="blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="privacy.html" class="text-white hover:underline"
+          <a href="../blog/blog.html" class="text-white hover:underline"> Blog </a>
+          <a href="../privacy/privacy.html" class="text-white hover:underline"
             >Privacy Policy</a
           >
         </div>
@@ -278,8 +278,8 @@
 }
 
     </script>
-    <script src="script.js"></script>
-    <script src="toggle.js"></script>
+    <script src="../mainpage/script.js"></script>
+    <script src="../toggle/toggle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
       AOS.init({ duration: 600, once: false });
