--- a/Frontend/feedback/feedback.html
+++ b/Frontend/feedback/feedback.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback</title>
-    <link rel="stylesheet" href="feedback.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="toggle.css" />
+    <link rel="stylesheet" href="../feedback/feedback.css" />
+    <link rel="stylesheet" href="../mainpage/style.css" />
+    <link rel="stylesheet" href="../toggle/toggle.css" />
 
     <link
       rel="stylesheet"
@@ -32,7 +32,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <button class="back-button" onclick="window.location.href = 'index.html'">
+      <button class="back-button" onclick="window.location.href = '../index.html'">
         <i class="fa-solid fa-arrow-left fa-xl"></i>
       </button>
       <button type="button" id="darkModeToggle" class="toggle">
@@ -119,23 +119,23 @@
         </div>
         <!-- Footer Links (Right Side) -->
         <div class="footer-links">
-          <a href="about.html" class="text-white hover:underline">About Us</a>
-          <a href="contact.html" class="text-white hover:underline"
+          <a href="../about/about.html" class="text-white hover:underline">About Us</a>
+          <a href="../contact/contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
-          <a href="review.html" class="text-white hover:underline">Review</a>
-          <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline"
+          <a href="../review/review.html" class="text-white hover:underline">Review</a>
+          <a href="../faq/faq.html" class="text-white hover:underline">FAQ</a>
+          <a href="../feedback/feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
-          <a href="community.html" class="text-white hover:underline"
+          <a href="../community/community.html" class="text-white hover:underline"
             >Community</a
           >
-          <a href="terms.html" class="text-white hover:underline"
+          <a href="../terms/terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
           >
-          <a href="blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="privacy.html" class="text-white hover:underline"
+          <a href="../blog/blog.html" class="text-white hover:underline"> Blog </a>
+          <a href="../privacy/privacy.html" class="text-white hover:underline"
             >Privacy Policy</a
           >
         </div>
@@ -159,8 +159,8 @@
       </div>
     </footer>
 
-    <script src="feedback.js"></script>
-    <script src="script.js"></script>
-    <script src="toggle.js"></script>
+    <script src="../feedback/feedback.html"></script>
+    <script src="../mainpage/script.js"></script>
+    <script src="../toggle/toggle.js"></script>
   </body>
 </html>
