--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samnwadh - Connect & Collaborate</title>
-    <link rel="icon" type="image/x-icon" href="favicon-32x32.png" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="faq.css" />
-    <link rel="stylesheet" href="card.css" />
-    <link rel="stylesheet" href="toggle.css" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="./mainpage/style.css" />
+    <link rel="stylesheet" href="./faq/faq.css" />
+    <link rel="stylesheet" href="./card/card.css" />
+    <link rel="stylesheet" href="./toggle/toggle.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
     />
-    <link rel="stylesheet" href="homefeedback.css" />
+    <link rel="stylesheet" href="./feedback/homefeedback.css" />
 
     <style>
       .faq-section {
@@ -68,7 +68,7 @@
 
         <a href="index.html"
           ><img
-            src="logo.webp"
+            src="./images/logo.webp"
             alt="Samnwadh"
             class="logo"
             style="margin: 18px"
@@ -77,13 +77,13 @@
         <nav class="navbar" >
           <ul class="nav-links">
             <li><a href="#features">Features</a></li>
-            <li><a href="techstack.html">Tech Stack</a></li>
+            <li><a href="./tech-stack/techstack.html">Tech Stack</a></li>
             <li><a href="contributor/contributor.html">Contribute</a></li>
-            <li><a href="community.html">Community</a></li>
-            <li><a href="review.html">Review</a></li>
+            <li><a href="./community/community.html">Community</a></li>
+            <li><a href="./review/review.html">Review</a></li>
 
-            <li><a href="login.html" id="auth-link">Login</a></li>
-            <li><a href="profile/user.html">Profile</a></li>
+            <li><a href="./login/login.html" id="auth-link">Login</a></li>
+            <li><a href="./profile/user.html">Profile</a></li>
           </ul>
           <button type="button" id="darkModeToggle" class="toggle">
             <span class="icon sun">☀️</span>
@@ -109,14 +109,14 @@
 
       <a
         href="#contribute"
-        onclick="window.location.href = 'signup.html'"
+        onclick="window.location.href = './signup/signup.html'"
         class="home-bttn"
         >Get Started</a
       >
 
       <a
         href="#contribute"
-        onclick="window.location.href = 'createRoom.html'"
+        onclick="window.location.href = './createroom/createRoom.html'"
         class="bg-yellow-500 text-black py-2 px-6 rounded-lg hover:bg-yellow-400 hover:text-white transition-colors duration-300"
         >Create Room</a
       >
@@ -327,23 +327,23 @@
         </div>
         <!-- Footer Links (Right Side) -->
         <div class="footer-links">
-          <a href="about.html" class="text-white hover:underline">About Us</a>
-          <a href="contact.html" class="text-white hover:underline"
+          <a href="./about/about.html" class="text-white hover:underline">About Us</a>
+          <a href="./contact/contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
-          <a href="review.html" class="text-white hover:underline">Review</a>
-          <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline"
+          <a href="./review/review.html" class="text-white hover:underline">Review</a>
+          <a href="./faq/faq.html" class="text-white hover:underline">FAQ</a>
+          <a href="./feedback/feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
-          <a href="community.html" class="text-white hover:underline"
+          <a href="./community/community.html" class="text-white hover:underline"
             >Community</a
           >
-          <a href="blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="privacy.html" class="text-white hover:underline"
+          <a href="./blog/blog.html" class="text-white hover:underline"> Blog </a>
+          <a href="./privacy/privacy.html" class="text-white hover:underline"
             >Privacy Policy</a
           >
-          <a href="terms.html" class="text-white hover:underline"
+          <a href="./terms/terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
           >
         </div>
@@ -352,23 +352,23 @@
       <!-- Social Links & Copyright (Centered at Bottom) -->
       <div class="bottom-footer">
         <div class="footer-links">
-          <a href="about.html" class="text-white hover:underline">About Us</a>
-          <a href="contact.html" class="text-white hover:underline"
+          <a href="./about/about.html" class="text-white hover:underline">About Us</a>
+          <a href="./contact/contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
-          <a href="review.html" class="text-white hover:underline">Review</a>
-          <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline"
+          <a href="./review/review.html" class="text-white hover:underline">Review</a>
+          <a href="./faq/faq.html" class="text-white hover:underline">FAQ</a>
+          <a href="./feedback/feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
-          <a href="community.html" class="text-white hover:underline"
+          <a href="./community/community.html" class="text-white hover:underline"
             >Community</a
           >
-          <a href="terms.html" class="text-white hover:underline"
+          <a href="./terms/terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
           >
-          <a href="blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="privacy.html" class="text-white hover:underline"
+          <a href="./blog/blog.html" class="text-white hover:underline"> Blog </a>
+          <a href="./privacy/privacy.html" class="text-white hover:underline"
             >Privacy Policy</a
           >
         </div>
@@ -387,13 +387,13 @@
         </div>
       </div>
     </footer>
-    <script src="feedback.js"></script>
+    <script src="./feedback/feedback.js"></script>
 
-    <script src="feedback.js"></script>
-    <script src="script.js"></script>
-    <script src="event.js"></script>
-    <script src="card.js"></script>
-    <script src="toggle.js"></script>
+    <script src="./feedback/feedback.js"></script>
+    <script src="./mainpage/script.js"></script>
+    <!-- <script src="./event.js"></script> -->
+    <script src="./card/card.js"></script>
+    <script src="./toggle/toggle.js"></script>
 
     <script>
       function updateAuthLink() {
