--- a/Frontend/login/login.html
+++ b/Frontend/login/login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../login/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
     <!-- Navbar -->
     <nav class="navbar">
-        <button class="back-button" onclick="window.location.href = 'index.html'">
+        <button class="back-button" onclick="window.location.href = '../index.html'">
             <i class="fa-solid fa-arrow-left fa-xl"></i>
         </button>
         <button type="button" id="darkModeToggle" class="toggle">
@@ -31,7 +31,7 @@
         </div>
 
         <button class="login-button" onclick="login()">Login</button>
-        <p class="login-text">Don't have an account? <a href="signup.html" class="login-link">Sign Up</a></p>
+        <p class="login-text">Don't have an account? <a href="../signup/signup.html" class="login-link">Sign Up</a></p>
         <p id="login-message" class="login-message"></p>
     </div>
     <footer class="bg-blue-600 text-white py-8">
@@ -58,20 +58,20 @@
           </div>
           <!-- Footer Links (Right Side) -->
           <div class="footer-links">
-            <a href="about.html" class="text-white hover:underline">About Us</a>
-            <a href="contact.html" class="text-white hover:underline"
+            <a href="../about/about.html" class="text-white hover:underline">About Us</a>
+            <a href="../contact/contact.html" class="text-white hover:underline"
               >Contact Us</a
             >
-            <a href="review.html" class="text-white hover:underline">Review</a>
-            <a href="faq.html" class="text-white hover:underline">FAQ</a>
-            <a href="feedback.html" class="text-white hover:underline"
+            <a href="../review/review.html" class="text-white hover:underline">Review</a>
+            <a href="../faq/faq.html" class="text-white hover:underline">FAQ</a>
+            <a href="../feedback/feedback.html" class="text-white hover:underline"
               >Feedback</a
             >
-            <a href="terms.html" class="text-white hover:underline"
+            <a href="../terms/terms.html" class="text-white hover:underline"
               >Terms & Conditions</a
             >
-            <a href="blog.html" class="text-white hover:underline"> Blog </a>
-            <a href="privacy.html" class="text-white hover:underline"
+            <a href="../blog/blog.html" class="text-white hover:underline"> Blog </a>
+            <a href="../privacy/privacy.html" class="text-white hover:underline"
               >Privacy Policy</a
             >
           </div>
@@ -109,6 +109,6 @@
             }
         }
     </script>
-<script src="script.js"></script>
+<script src="../mainpage/script.js"></script>
 </body>
 </html>
