--- a/Frontend/tech-stack/techstack.html
+++ b/Frontend/tech-stack/techstack.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tech Stack</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="tech-stack.css" />
-    <link rel="stylesheet" href="toggle.css" />
+    <link rel="stylesheet" href="../mainpage/style.css" />
+    <link rel="stylesheet" href="../tech-stack/tech-stack.css" />
+    <link rel="stylesheet" href="../toggle/toggle.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -26,15 +26,15 @@
     <header class="bg-blue-600 text-white p-6">
       <div class="container">
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-        <a href="index.html"><img src="logo.webp" alt="Samnwadh" /></a>
+        <a href="../index.html"><img src="../images/logo.webp" alt="Samnwadh" /></a>
         <nav class="navbar">
           <ul class="nav-links">
-            <li><a href="index.html#features">Features</a></li>
-            <li><a href="techstack.html">Tech Stack</a></li>
-            <li><a href="contributor/contributor.html">Contribute</a></li>
-            <li><a href="community.html">Community</a></li>
-            <li><a href="review.html">Review</a></li>
-            <li><a href="login.html" id="auth-link">Login</a></li>
+            <li><a href="../index.html#features">Features</a></li>
+            <li><a href="../tech-stack/techstack.html">Tech Stack</a></li>
+            <li><a href="../contributor/contributor.html">Contribute</a></li>
+            <li><a href="../community/community.html">Community</a></li>
+            <li><a href="../review/review.html">Review</a></li>
+            <li><a href="../login/login.html" id="auth-link">Login</a></li>
           </ul>
           <button type="button" id="darkModeToggle" class="toggle">
             <span class="icon sun">☀️</span>
@@ -210,23 +210,23 @@
         </div>
         <!-- Footer Links (Right Side) -->
         <div class="footer-links">
-          <a href="about.html" class="text-white hover:underline">About Us</a>
-          <a href="contact.html" class="text-white hover:underline"
+          <a href="../about/about.html" class="text-white hover:underline">About Us</a>
+          <a href="../contact/contact.html" class="text-white hover:underline"
             >Contact Us</a
           >
-          <a href="review.html" class="text-white hover:underline">Review</a>
-          <a href="faq.html" class="text-white hover:underline">FAQ</a>
-          <a href="feedback.html" class="text-white hover:underline"
+          <a href="../review/review.html" class="text-white hover:underline">Review</a>
+          <a href="../faq/faq.html" class="text-white hover:underline">FAQ</a>
+          <a href="../feedback/feedback.html" class="text-white hover:underline"
             >Feedback</a
           >
-          <a href="community.html" class="text-white hover:underline"
+          <a href="../community/community.html" class="text-white hover:underline"
             >Community</a
           >
-          <a href="terms.html" class="text-white hover:underline"
+          <a href="../terms/terms.html" class="text-white hover:underline"
             >Terms & Conditions</a
           >
-          <a href="blog.html" class="text-white hover:underline"> Blog </a>
-          <a href="privacy.html" class="text-white hover:underline"
+          <a href="../blog/blog.html" class="text-white hover:underline"> Blog </a>
+          <a href="../privacy/privacy.html" class="text-white hover:underline"
             >Privacy Policy</a
           >
         </div>
@@ -250,8 +250,8 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
-    <script src="toggle.js"></script>
+    <script src="../mainpage/script.js"></script>
+    <script src="../toggle/toggle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
       AOS.init({ duration: 600, once: false });
