Redesigned Create Room page

--- a/Frontend/createroom/createRoom.html
+++ b/Frontend/createroom/createRoom.html
@@ -24,7 +24,7 @@
           type="text"
           id="name"
           class="input-field"
-          placeholder="Name"
+          placeholder="Room Name"
           required
         />
         <input
